# RankedHonor

./: .gitignore  CI_CD_IMPLEMENTATION.md  CNAME  DOCUMENTACAO.md  README.md  verify-cicd.sh
.github/: README.md  dependabot.yml
.github/workflows/: cd-frontend.yml  ci-backend-python.yml  ci-backend-python.yml.template  ci-backend-rust.yml  ci-backend-rust.yml.template  ci-frontend.yml  ci-launcher.yml.template  deploy-frontend.yml  security.yml
Greeting User/: README.md  package.json
Greeting User/src/: App.tsx  index.css
Greeting User/src/components/: ContentCard.tsx  ContentFeed.tsx  PostInteractions.tsx
Greeting User/src/data/: mockPosts.ts
Greeting User/src/styles/: globals.css
back/: .gitkeep  README.md
back/database/: .gitignore  DATABASE.md
back/database/mongodb/: README.md  schemas.js
back/database/mysql/: README.md  schema.sql
back/docs/: API_SPEC.md  ARCHITECTURE.md
back/python-api/: .env.example  README.md  pyproject.toml
back/python-api/app/: main.py
back/python-api/app/api/v1/: __init__.py
back/python-api/app/api/v1/endpoints/: auth.py  matches.py  rankings.py  streams.py  users.py
back/python-api/app/core/: config.py  database.py  mongodb.py  redis.py  security.py
back/python-api/tests/: __init__.py  test_main.py
back/rust-core/: .env.example  Cargo.toml  README.md
back/rust-core/auth-rs/: Cargo.toml
back/rust-core/auth-rs/src/: lib.rs
back/rust-core/game-server/: Cargo.toml
back/rust-core/game-server/src/: main.rs
back/rust-core/game-server/src/routes/: matches.rs  mod.rs
back/rust-core/matchmaking-engine/: Cargo.toml
back/rust-core/matchmaking-engine/src/: lib.rs
back/rust-core/shared-models/: Cargo.toml
back/rust-core/shared-models/src/: lib.rs  matches.rs  stats.rs  user.rs
back/rust-core/websocket-server/: Cargo.toml
back/rust-core/websocket-server/src/: main.rs
back/shared/: .gitkeep
docs/: PRIVACIDADE_E_ETICA.md  STATUS_PROJETO.md  VISAO_E_OBJETIVOS.md
docs/arquitetura/: VISAO_GERAL.md
docs/features/: SISTEMA_METRICAS.md
docs/launcher/: ESPECIFICACAO_TECNICA.md
docs/monetizacao/: MODELO_DE_NEGOCIO.md
front/: .lintstagedrc.js  .prettierignore  FACTION_SYSTEM_EXAMPLES.md  FACTION_SYSTEM_IMPLEMENTATION.md  HERO_ICONS_IMPLEMENTATION.md  HERO_IMAGES_GUIDE.md  README.md  next.config.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
front/scripts/: README.md  extract-hero-icons.py  optimize-images.js  process-hero-icons.sh  requirements.txt
front/src/: README.md
front/src/__tests__/: example.test.tsx
front/src/app/: README.md  globals.css  layout.tsx  page.tsx
front/src/app/(auth)/: README.md
front/src/app/(auth)/login/: page.tsx
front/src/app/(auth)/register/: page.tsx
front/src/app/(dashboard)/: README.md  layout.tsx
front/src/app/(dashboard)/dashboard/: page.tsx
front/src/app/(dashboard)/dashboard/content/: page.tsx
front/src/app/(dashboard)/profile/: page.tsx
front/src/app/(dashboard)/ranked/: page.tsx
front/src/app/content/: page.tsx
front/src/app/dashboard/: page.tsx
front/src/app/login/: page.tsx
front/src/app/profile/: page.tsx
front/src/app/ranked/: page.tsx
front/src/app/register/: page.tsx
front/src/components/: AuthModal.tsx  Hero.tsx  LiveFeed.tsx  MatchmakingPanel.tsx  Navbar.tsx  README.md  RankingBoard.tsx  UserProfile.tsx
front/src/components/content/: ContentCard.tsx  ContentFeed.tsx  PostInteractions.tsx
front/src/components/dashboard/: DashboardHero.tsx  README.md
front/src/components/features/: HeroClassSelector.tsx  MapRoleSelector.tsx  MatchmakingLobby.tsx  PlayerProfileCard.tsx  PreparationTimer.tsx  README.md
front/src/components/features/auth/: AuthModal.tsx
front/src/components/features/profile/: AvatarPicker.tsx  README.md  UserProfile.tsx
front/src/components/features/ranking/: RankingBoard.tsx
front/src/components/figma/: README.md
front/src/components/landing/: ContentCreators.tsx  FinalCTA.tsx  Footer.tsx  GameModes.tsx  Header.tsx  HeroSection.tsx  HowItWorks.tsx  LauncherSection.tsx  MainFeed.tsx  QuickActions.tsx  README.md  RankingsSection.tsx  Sidebar.tsx
front/src/components/layout/: Footer.tsx  Header.tsx  Navbar.tsx  README.md
front/src/components/shared/: FloatingMatchmaking.tsx  Hero.tsx  LiveFeed.tsx  MatchmakingPanel.tsx  README.md
front/src/components/ui/: README.md  calendar.tsx  chart.tsx  checkbox.tsx  input-otp.tsx  input.tsx  resizable.tsx  select.tsx  tabs.tsx  textarea.tsx
front/src/contexts/: AuthContext.tsx  MatchmakingContext.tsx  README.md
front/src/data/: mockPosts.ts
front/src/hooks/: README.md  useLocalStorage.ts
front/src/lib/: README.md
front/src/lib/api/: README.md
front/src/lib/constants/: README.md  auth.constants.ts  game.constants.ts
front/src/services/: README.md  auth.service.ts  profile.service.ts  websocket.service.ts
front/src/types/: README.md  auth.ts  content.ts  index.ts  user.ts
front/src/utils/: README.md
launcher/: README.md
