[workspace]
members = [
    "auth-rs",
    "game-server",
    "matchmaking-engine",
    "websocket-server",
    "shared-models",
]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["RankedHonor Team"]
license = "MIT"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.41", features = ["full"] }
tokio-util = "0.7"

# Web frameworks
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "mysql", "chrono", "uuid"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }

# Authentication & Security
argon2 = "0.5"
jsonwebtoken = "9.3"
uuid = { version = "1.11", features = ["v4", "serde"] }

# Utilities
chrono = { version = "0.4", features = ["serde"] }
thiserror = "2.0"
anyhow = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"

# Testing
mockall = "0.13"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
