[package]
name = "auth-rs"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
# Workspace dependencies
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
argon2.workspace = true
jsonwebtoken.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true

# Local dependencies
shared-models = { path = "../shared-models" }

# Specific dependencies
validator = { version = "0.18", features = ["derive"] }
async-trait = "0.1"

[dev-dependencies]
mockall.workspace = true
