[package]
name = "game-server"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "game-server"
path = "src/main.rs"

[dependencies]
# Workspace dependencies
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true
redis.workspace = true
uuid.workspace = true
chrono.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
dotenv.workspace = true

# Local dependencies
shared-models = { path = "../shared-models" }
auth-rs = { path = "../auth-rs" }

[dev-dependencies]
mockall.workspace = true
